# Visual-Inertial-Odometry

./: CMakeLists.txt  README.md  package.xml
include/core/: FeatureTracker.hpp  VioEstimator.hpp
include/utils/: measure_time.hpp  performance_logger.hpp  plot_tracking.py
include/vio_node/: VioNode.hpp  Vio_Node.h
launch/: launch.py
src/: VioNode.cpp  VioNode_node.cpp  vionode_jj.cpp
src/core/: FeatureTracker.cpp  VioEstimator.cpp
src/initialization/: vio_node.h
